k8s/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: devops-project
spec:
  clusterIP: None
  selector:
    app: mongo
  ports:
    - port: 27017
