k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: devops-project
spec:
  selector:
    app: backend
  ports:
    - port: 80
      targetPort: 5000
  type: ClusterIP
